# pink

./: .CMakeLists.txt.swp  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Makefile  README.md  TODO.txt  output.txt
docs/: Interpretive Runtime  TODO  compile time model  coroutines  llvm-codegen  pink  pointer arithmetic  poloymorphism-new  the-expression-problem  type specification  use before definition
docs/Codegen/: Calling-convention  compile time model  llvm-codegen
docs/Notes/: ScopeSets  compile time model  coroutines  renaming issues
documents/: Grammar.txt  assignment.txt  classes.txt  conversion  functions_as_values  functions_as_values.txt  modules.txt  principles.txt  scope_exit_rule.txt  todo.txt  use_before_def  use_before_def.txt  when_to_load_variables  when_to_load_variables.txt
documents/notes/: classes.txt  compiler_overview.txt  conversion.txt  debug_notes.txt  evaluation.txt  match.txt  modules.txt  (+11 more)
include/: Ast.hpp  Error.hpp  Location.hpp  Nil.hpp  PinkConfig.h  PinkConfig.h.in  StringInterner.hpp
new_src/: Application.cpp  Application.hpp  Assignment.cpp  Assignment.hpp  Associativity.hpp  Ast.cpp  Ast.hpp  Bind.cpp  Bind.hpp  Binop.cpp  Binop.hpp  BinopCodegen.cpp  BinopCodegen.hpp  BinopLiteralTable.cpp  BinopLiteralTable.hpp  BinopPrecedenceTable.cpp  BinopPrecedenceTable.hpp  BinopTable.cpp  BinopTable.hpp  Boolean.cpp  Boolean.hpp  Closure.cpp  Closure.hpp  Environment.cpp  Environment.hpp  Error.cpp  Error.hpp  Gensym.cpp  Gensym.hpp  Integer.cpp  Integer.hpp  Judgement.cpp  Judgement.hpp  Kernel.cpp  Kernel.hpp  Lambda.cpp  Lambda.hpp  Lexer.hpp  Lexer.re  Literal.hpp  (+40 more)
src/: Application.c  Application.h  Assignment.c  Assignment.h  Associativity.h  Ast.c  Ast.cpp  Ast.h  AtomType.c  AtomType.h  Bind.c  Bind.h  Binop.c  Binop.h  BinopEliminators.c  BinopEliminators.h  BinopPrecedence.c  BinopPrecedence.h  BinopTable.c  BinopTable.h  Boolean.c  Boolean.h  Conditional.c  Conditional.h  Entity.c  Entity.h  Environment.c  Environment.h  Error.cpp  EvalError.h  EvalJudgement.h  IdentifierSet.c  IdentifierSet.h  Integer.c  Integer.h  Iteration.c  Iteration.h  Judgement.h  Lambda.c  Lambda.h  (+64 more)
test/: CMakeLists.txt
test/include/: Test.h  Test.hpp  TestError.hpp  TestStringInterner.hpp  Testbench.h
test/include/ast/: TestApplication.h  TestArray.h  TestAssignment.h  TestAstAndNil.h  TestBind.h  TestBinop.h  TestBlock.h  TestBool.h  TestConditional.h  TestDot.h  TestFunction.h  TestInt.h  TestNil.h  TestTuple.h  TestUnop.hpp  TestVariable.hpp  TestWhile.h
test/include/aux/: TestBinopTable.hpp  TestEnvironment.hpp  TestError.h  TestFlags.h  TestLocation.h  TestOutcome.h  TestPrecedenceTable.hpp  TestSymbolTable.h  TestTypeInterner.h  TestUnopTable.hpp
test/include/core/: TestBasics.h  TestCodegen.h  TestTypecheck.h
test/include/front/: TestLexer.h  TestParser.h  TestToken.hpp
test/include/kernel/: TestBinopPrimitives.h  TestFirstPhase.h  TestUnopPrimitives.hpp
test/include/ops/: TestBinopCodegen.hpp  TestBinopLiteral.hpp  TestUnopCodegen.hpp  TestUnopLiteral.hpp
test/include/support/: Common.h  ComputeLocation.hpp  GenerateRandomAst.h  LanguageTerms.hpp  TestTerms.hpp
test/include/type/: TestArrayType.h  TestBoolType.hpp  TestFunctionType.h  TestIntType.hpp  TestNilType.h  TestPointerType.h  TestTupleType.h  TestTypeAndNilType.h  TestVoidType.h
test/input/: basic.pink
test/source/: Test.cpp  TestMain.cpp  Testbench.cpp
test/source/ast/: Ast.cpp  Codegen.cpp  TestApplication.cpp  TestArray.cpp  TestAssignment.cpp  TestAstAndNil.cpp  TestBind.cpp  TestBinop.cpp  TestBlock.cpp  TestBool.cpp  TestConditional.cpp  TestDot.cpp  TestFunction.cpp  TestInt.cpp  TestNil.cpp  TestTuple.cpp  TestUnop.cpp  TestVariable.cpp  TestWhile.cpp  Typecheck.cpp
test/source/aux/: CLIOptions.cpp  Error.cpp  InternalFlags.cpp  Location.cpp  Outcome.cpp  ScopeStack.cpp  StringInterner.cpp  SymbolTable.cpp  TestEnvironment.cpp  TestError.cpp  TestFlags.cpp  TestLocation.cpp  TestOutcome.cpp  TestStringInterner.cpp  TestSymbolTable.cpp  TestTypeInterner.cpp  TypeInterner.cpp
test/source/core/: TestBasics.cpp  TestCodegen.cpp  TestFirstPhase.cpp  TestTypecheck.cpp  main.cpp
test/source/front/: Lexer.cpp  Parser.cpp  TestLexer.cpp  TestParser.cpp  TestToken.cpp  Token.cpp
test/source/kernel/: TestBinopPrimitives.cpp  TestUnopPrimitives.cpp
test/source/ops/: Binops.cpp  TestBinopCodegen.cpp  TestBinopLiteral.cpp  TestBinopTable.cpp  TestUnopCodegen.cpp  TestUnopLiteral.cpp  TestUnopTable.cpp  Unops.cpp
test/source/support/: Common.cpp
test/source/type/: TestArrayType.cpp  TestBoolType.cpp  TestFunctionType.cpp  TestIntType.cpp  TestNilType.cpp  TestPointerType.cpp  TestTupleType.cpp  TestVoidType.cpp  Type.cpp  TypeInterner.cpp
test/src/: Test.cpp  TestAstAndNil.cpp  TestError.cpp  TestMain.cpp  TestStringInterner.cpp
test/src/ast/: TestApplication.cpp  TestAssignment.cpp  TestAstAndNil.cpp  TestBind.cpp  TestBinop.cpp  TestBlock.cpp  TestBool.cpp  TestFunction.cpp  TestInt.cpp  TestUnop.cpp  TestVariable.cpp
test/src/aux/: TestBinopCodegen.cpp  TestBinopLiteral.cpp  TestBinopTable.cpp  TestEnvironment.cpp  TestError.cpp  TestOutcome.cpp  TestPrecedenceTable.cpp  TestStringInterner.cpp  TestSymbolTable.cpp  TestTypeInterner.cpp  TestUnopCodegen.cpp  TestUnopLiteral.cpp  TestUnopTable.cpp
test/src/core/: TestBasics.cpp  TestFirstPhase.cpp
test/src/front/: TestLexer.cpp  TestParser.cpp  TestToken.cpp
test/src/kernel/: TestBinopPrimitives.cpp  TestFirstPhase.cpp  TestUnopPrimitives.cpp
test/src/ops/: TestBinopCodegen.cpp  TestBinopLiteral.cpp  TestBinopTable.cpp  TestUnopCodegen.cpp  TestUnopLiteral.cpp  TestUnopTable.cpp
test/src/support/: Common.cpp  GenerateRandomAst.cpp
test/src/type/: TestBoolType.cpp  TestFunctionType.cpp  TestIntType.cpp  TestTypeAndNilType.cpp
test/test-programs/: add.p  array.p  assign.p  bind.p  conditional.p  div.p  function.p  ieq.p  ige.p  igt.p  ile.p  ilt.p  ineq.p  iteration.p  mod.p  mul.p  ptr.p  simple.p  sub.p  tuple.p  tuple_of_array.p  tuple_of_tuple.p
(+354 files in other folders)
